--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
 [project]
-name = "dbt-lite"
+name = "dbx-sql-runner"
 version = "0.1.0"
-description = "A lightweight DBT-like SQL transformation tool for Databricks SQL"
-authors = [{ name = "Sharma", email = "munish1117@gmail.com" }]
+description = "A lightweight SQL transformation tool for Databricks SQL"
+authors = [{ name = "Sharma", email = "munish7771@gmail.com" }]
 dependencies = [
     "networkx",
-    "databricks-sql-connector"
+    "databricks-sql-connector[pyarrow]",
+    "PyYAML"
 ]
 readme = "README.md"
 
 [project.scripts]
-dbt-lite = "dbt_lite.cli:main"
+dbx-sql-runner = "dbx_sql_runner.cli:main"
 
 [tool.setuptools]
-packages = ["dbt_lite"]
+packages = ["dbx_sql_runner"]
