Feature: added lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,12 @@ classifiers = [
 dependencies = [
     "networkx>=3.0",
     "databricks-sql-connector[pyarrow]>=3.0",
-    "PyYAML>=6.0"
+    "PyYAML>=6.0",
+    "sqlglot>=11.0"
 ]
+
+[project.optional-dependencies]
+dev = ["pytest"]
 
 [project.scripts]
 dbx-sql-runner = "dbx_sql_runner.cli:main"
