--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[dev]
         
+    - name: Lint with Ruff
+      run: |
+        pip install ruff
+        ruff check .
+
     - name: Run tests
       run: |
         python -m pytest
